# splined

./: Cargo.toml  TODO.md
assets/shaders/: grid.wgsl
src/: camera.rs  draw.rs  editor.rs  main.rs  spline.rs  vello.rs
